# Talky

./: .gitignore  CMakeLists.txt  README.md  Talky.iss  deployment_guide.md  ship_it.ps1  vcpkg.json
include/: app_controller.hpp  audio_engine.hpp  audio_output.hpp  local_llm.hpp  logger.hpp  slang_mapper.hpp  translation_manager.hpp  tts_manager.hpp
src/: main.cpp
